--- a/main.tex
+++ b/main.tex
@@ -159,14 +159,28 @@ This paper, thus, makes the following specific research contributions:
     \item We evaluate these refactorings on a set of benchmarks, demonstrating that removal of parallelism can allow us to manually derive the structured parallel code that is comparable to the original legacy-parallel version in terms of performance, while being more portable, adaptive and maintainable.
 \end{itemize}
 
-\section{Background} (1 page)
+\section{Background (1 page)}
 Legacy-parallel code, written in ad-hoc way using low level parallel libraries such as \emph{pthreads}, is still very much present in various software repositories and projects. This code was usually developed by parallelism experts before the libraries and programming models for structured parallelisation became popular. It is usually tailored to one specific target machine and architecture, and might use highly-customised parallelisation and associated data structures. This makes it very hard to maintain that code, an increasing important feature in software engineering, or to port it to new architectures. In an ideal case, every legacy-parallel application could be transformed into structured parallel programs, written using high-level parallel programming libraries. However, for this to be possible, it is necessary that a well-defined underlying pattern of parallelism actually exists in the code, which can be exploited by instances of patterns. This is not always the case. However, in substantial number of cases, the parallelism in the application is an instance of one of the common patterns, such as farm, pipeline, workpool or stencil. In these cases, it should be possible, automatically or semi-automatically, to \emph{replace} unstructured parallelism with its structured (patterned) equivalent.   
 
-\subsection{Parallel Patterns}
+\subsection{Parallel Patterns (1/3 page)}
+\begin{itemize}
+\item What are paralell patterns
+\item Some common patterns
+  \item Benefits of using patterns
+  \item Relevant pattern libraries (Open MP, Intel TBB...)
+\end{itemize}
 
-\subsection{Refactoring}
+\subsection{Refactoring (1/3 page)}
+\begin{itemize}
+\item What is refactoring
+\item Refactoring for parallelism, specifically for patterns
+\end{itemize}
 
 \subsection{Static and Dynamic Analysis}
+\begin{itemize}
+\item Mostly about analysis for pattern discovery, maybe we can lift from Adam's thesis
+\end{itemize}
+
 
 \section{Software Restoration (2 pages)} \label{sec:softRest}
 
@@ -178,6 +192,14 @@ Legacy-parallel code, written in ad-hoc way using low level parallel libraries s
   \item replace the eliminated parallelism with structured code written using high-level parallel pattern libraries.
 \end{itemize}
 Three key technologies that software restoration is based are parallel patterns, software refactoring and code analysis, descrbied in Section~\ref{sec:background}. In the software restoration, code goes through different phases, from the original code, via \emph{clean} sequential code to structured parallel code. The overall process is depicted in Figure~\ref{fig:SoftRest} and it involves the following steps: 
+
+\begin{figure}
+  \begin{center}
+\includegraphics[scale=0.2]{images/SoftRest.png}
+\caption{Software Restoration Process}
+\label{fig:SoftRest}
+  \end{center}
+\end {figure}
 
 \begin{itemize}
 \item \emph{Initial Pattern Discovery.} We start with a legacy-parallel code, written using one of the low level threading libraries. For the purposes of this paper, we will assume that the code is written using the \emph{pthreads} library, but the principle is the same with the similar libraries such as \emph{cilk} or \emph{MPI}. The initial step in software restoration is to do \emph{initial pattern discovery} to discover i) parts of the threaded code that correspond to instances of parallel patterns; and, ii) parts of the threaded code that represent concurrent computations. It is necessary to know which threaded code is concurrent for the next step, as sequentialising these portions of code can lead to deadlocks. A typical example of this is spawning a background thread to deal with signals that the program receives - inlining this thread into the main flow of the code would create a deadlock. Pattern discovery is required to, firstly, mark the parts of the code that are of interest to restoration and, secondly, to drive the kind of transformations that are applied in the further steps.
